testsuite/tests/v1/bin_op/logic/and/non_bool/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:3:16 ]
   │
 3 │ print(bool and "")
   │                ─┬  
   │                 ╰── Expecting a "Bool", got a "Str"
───╯
